--- a/html/.htaccess
+++ b/html/.htaccess
@@ -1,5 +1,5 @@
 RewriteEngine On
 
-RewriteCond %{SERVER_PORT} !^443$
+RewriteCond %{ENV:HTTPS} !on
 
-RewriteRule .* https://%{SERVER_NAME}%{REQUEST_URI} [R=301,L]
+RewriteRule ^(.*)$ https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
